Using enum for Event Types, support for localization of this enum

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Neighborhood Security</string>
+    <string name="CARJACKING">Carjacking</string>
+    <string name="BURGLARY">Burglary</string>
+    <string name="ROBBERY">Robbery</string>
+    <string name="THEFT">Theft</string>
+    <string name="SHADY_PEOPLE">Shady People</string>
+    <string name="SCAMMERS">Scammers</string>
 </resources>
