--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
 
     <!-- Other -->
     <string name="action_settings">Settings</string>
+    <string name="title_activity_event_detail">Event Detail</string>
+    <string name="event_voted">Event voted</string>
+    <string name="event_voted_undo">Undo</string>
 </resources>
