EventCreate with address or coordinates

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,8 @@
     <string name="event_voted">Event voted</string>
     <string name="event_voted_undo">Undo</string>
     <string name="dialog_close_button">Close</string>
+    <string name="radio_address">Address</string>
+    <string name="radio_coordinates">Coordinates</string>
 
     <!-- Hints -->
     <string name="hint_event_type">Event type</string>
@@ -28,5 +30,7 @@
     <string name="hint_country">Country</string>
     <string name="hint_city">City</string>
     <string name="hint_street">Street</string>
+    <string name="hint_longitude">Longitude</string>
+    <string name="hint_latitude">Latitude</string>
 
 </resources>
