--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,9 @@
 
     <!-- Other -->
     <string name="action_settings">Settings</string>
+    <string name="action_create_event">Create event</string>
     <string name="title_activity_event_detail">Event Detail</string>
+    <string name="title_activity_event_create">Event create</string>
     <string name="event_voted">Event voted</string>
     <string name="event_voted_undo">Undo</string>
     <string name="dialog_close_button">Close</string>
