--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Neighborhood Security</string>
+    <string name="web_client_id">822387448086-becf94hab3hbcq5h0irme0hij0kq6d45.apps.googleusercontent.com</string>
 
     <!-- Enum Format -->
     <string name="eventtype_carjacking">Carjacking</string>
@@ -25,6 +26,12 @@
     <string name="dialog_close_button">Close</string>
     <string name="radio_address">Address</string>
     <string name="radio_coordinates">Coordinates</string>
+    <string name="signin">Sign In</string>
+    <string name="signup">Sign Up</string>
+    <string name="reset_password">Reset password</string>
+    <string name="register">Register</string>
+    <string name="forgot_password">Forgot your password?</string>
+    <string name="register_now">Not a member? Register now!</string>
 
     <!-- Hints -->
     <string name="hint_event_type">Event type</string>
@@ -34,5 +41,8 @@
     <string name="hint_street">Street</string>
     <string name="hint_longitude">Longitude</string>
     <string name="hint_latitude">Latitude</string>
+    <string name="hint_email">Email</string>
+    <string name="hint_username">Username</string>
+    <string name="hint_password">Password</string>
 
 </resources>
