--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Neighborhood Security</string>
     <string name="web_client_id">822387448086-becf94hab3hbcq5h0irme0hij0kq6d45.apps.googleusercontent.com</string>
     <string name="facebook_app_id">1895370760703633</string>
+    <string name="fb_login_protocol_scheme">fb1895370760703633</string>
 
     <!-- Enum Format -->
     <string name="eventtype_carjacking">Carjacking</string>
