--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="register">Register</string>
     <string name="forgot_password">Forgot your password?</string>
     <string name="register_now">Not a member? Register now!</string>
+    <string name="title_authentication">Authentication</string>
 
     <!-- Hints -->
     <string name="hint_event_type">Event type</string>
