--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Neighborhood Security</string>
-    <string name="web_client_id">822387448086-becf94hab3hbcq5h0irme0hij0kq6d45.apps.googleusercontent.com</string>
-    <string name="facebook_app_id">1895370760703633</string>
-    <string name="fb_login_protocol_scheme">fb1895370760703633</string>
+    <string name="web_client_id" translatable="false">822387448086-becf94hab3hbcq5h0irme0hij0kq6d45.apps.googleusercontent.com</string>
+    <string name="facebook_app_id" translatable="false">1895370760703633</string>
+    <string name="fb_login_protocol_scheme" translatable="false">fb1895370760703633</string>
 
     <!-- Enum Format -->
     <string name="eventtype_carjacking">Carjacking</string>
@@ -35,7 +35,7 @@
     <string name="forgot_password">Forgot your password?</string>
     <string name="register_now">Not a member? Register now!</string>
     <string name="title_authentication">Authentication</string>
-    <string name="button_email_auth">Email Authentication</string>
+    <string name="button_email_auth">Login with Email</string>
 
     <!-- Hints -->
     <string name="hint_event_type">Event type</string>
