--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,6 @@
     <string name="title_activity_event_detail">Event Detail</string>
     <string name="event_voted">Event voted</string>
     <string name="event_voted_undo">Undo</string>
-
     <string name="dialog_close_button">Close</string>
     <string name="radio_address">Address</string>
     <string name="radio_coordinates">Coordinates</string>
@@ -47,5 +46,8 @@
     <string name="hint_email">Email</string>
     <string name="hint_username">Username</string>
     <string name="hint_password">Password</string>
+
+    <string name="single_vote">1 vote</string>
+    <string name="multiple_vote">%1$d votes</string>
 
 </resources>
