--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -41,4 +41,7 @@
     <string name="title_authentication">Autenticazione</string>
     <string name="forgot_password">Hai dimenticato la password?</string>
     <string name="hint_email">Email</string>
+    <string name="multiple_vote">%1$d voti</string>
+    <string name="single_vote">1 voto</string>
+    <string name="title_activity_event_list">Lista eventi</string>
 </resources>
