--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@
     <string name="action_create_event">Create event</string>
     <string name="title_activity_event_create">Create event</string>
     <string name="title_activity_subscription_create">Create subscription</string>
+    <string name="title_activity_subscription_list">Subscription list</string>
 
     <string name="metres_singular">%1$d metre</string>
     <string name="metres_plural">%1$d metres</string>
