--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,6 @@
     <string name="metres_plural">%1$d metres</string>
     <string name="radius">Radius:</string>
     <string name="action_create_subscription">Create subscription</string>
+
+    <string name="login_required_toast">You need an account to access this functionality!</string>
 </resources>
