--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,10 +91,17 @@
     <string name="msg_404_not_found_event_vote">There\'s a problem with your request. Event might have been deleted.</string>
     <string name="msg_500_internal_server_error_event_vote">An error has occurred on our remote server. Try again later. Contact us if the problem persists.</string>
 
-
     <string name="msg_network_problem_event_unvote">There might be some network problems, we couldn\'t delete your vote. Try again later.</string>
     <string name="msg_204_no_content_event_unvote">You have already removed your vote!</string>
 
+    <string name="msg_success_login">Logged in.</string>
+    <string name="msg_problem_login">Login error. Please check your credentials or you might have network problems.</string>
+
+    <string name="msg_success_register">Registered successfully.</string>
+    <string name="msg_problem_register">Registration error. Email is already in use or you might have network problems.</string>
+
+    <string name="msg_success_resetpassword">Email sent, please check your inbox!</string>
+    <string name="msg_problem_resetpassword">Reset password encountered an error. Email is not registered or you might have network problems.</string>
 
     <string name="msg_unknown_error">An unknown error has occurred. Try again later. Contact us if the problem persists.</string>
 </resources>
