--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,4 +115,10 @@
     <string name="msg_insert_valid_address">Address</string>
 
     <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
+    <string name="event_summary">Event summary</string>
+    <string name="subscription_summary">Subscription summary</string>
+    <string name="help">Help</string>
+    <string name="event_summary_text">You have seen %1$d events during the use of the application</string>
+    <string name="subscription_summary_text">You are subscribed to %1$d locations and have received %2$d notifications about them.</string>
+    <string name="subscription_summary_error">To see these statistics you need to have an account!</string>
 </resources>
