Progress Dialogs and Show Error on Subscription

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,8 +110,8 @@
     <string name="msg_insert_valid_username">Username cannot be empty.</string>
 
     <string name="msg_insert_valid_description">Insert a short description of the event</string>
-    <string name="msg_insert_valid_latitude">Insert a valid latitude</string>
-    <string name="msg_insert_valid_longitude">Insert a valid latitude</string>
+    <string name="msg_insert_valid_latitude">Insert a valid latitude, between -90 and +90</string>
+    <string name="msg_insert_valid_longitude">Insert a valid longitude, between -180 and +180</string>
     <string name="msg_insert_valid_address">Address</string>
 
     <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
@@ -121,4 +121,11 @@
     <string name="event_summary_text">You have seen %1$d events during the use of the application</string>
     <string name="subscription_summary_text">You are subscribed to %1$d locations and have received %2$d notifications about them.</string>
     <string name="subscription_summary_error">To see these statistics you need to have an account!</string>
+
+    <string name="progress_event_title">Publishing the event</string>
+    <string name="progress_event_message">Please wait</string>
+    <string name="progress_subscription_title">Publishing the subscription</string>
+    <string name="progress_subscription_message">Please wait</string>
+    <string name="msg_insert_valid_radius">Select a valid radius, between 0 and 2000</string>
+    <string name="msg_insert_valid_place">Select a place, before creating the subscription</string>
 </resources>
