--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -48,4 +48,69 @@
     <string name="metres_singular">%1$d metro</string>
     <string name="title_activity_subscription_create">Crea notifica</string>
     <string name="radius">Raggio:</string>
+    <string name="action_create_subscription">Crea sottoscrizione</string>
+    <string name="action_search">Cerca</string>
+    <string name="close">Chiudi</string>
+    <string name="event_summary">Riassunto eventi</string>
+    <string name="event_summary_text">Hai visto %1$d eventi da quando utilizzi questa applicazione</string>
+    <string name="help">Aiuto</string>
+    <string name="help_ns">Neighborhood Security ti permette di segnalare eventi criminosi e di sottoscriverti a notifiche riguardo una specifica zona. Non appena un utente segnalerà un evento a cui puoi essere interessato, ti verrà inviata una notifica!</string>
+    <string name="hint_address">Indirizzo</string>
+    <string name="login_required_toast">Ti serve un account per accedere a questa funzionalità!</string>
+    <string name="map_button">Mappa</string>
+    <string name="msg_204_no_content_event_unvote">Hai già rimosso il tuo voto!</string>
+    <string name="msg_204_no_content_event_vote">Hai già votato questo evento!</string>
+    <string name="msg_400_bad_request_event_vote">C\'è stato un problema con la tua richiesta.</string>
+    <string name="msg_400_bad_request_events">C\'è stato un problema con la tua richiesta. Controlla che tutti i campi richiesti siano compilati.</string>
+    <string name="msg_400_bad_request_subs">C\'è stato un problema con la tua richiesta. Controlla che tutti i campi richiesti siano compilati.</string>
+    <string name="msg_401_unauthorized_event_vote">Devi avere un account per usare questa funzionalità. Fallo ora, è gratis!</string>
+    <string name="msg_401_unauthorized_subs">Devi avere un account per usare questa funzionalità. Fallo ora, è gratis!</string>
+    <string name="msg_404_not_found_event_vote">C\'è stato un problema con la tua richiesta. L\'evento potrebbe essere stato eliminato.</string>
+    <string name="msg_404_not_found_user_events">Non hai effettuato l\'accesso oppure l\'account non è registrato sul nostro server. Prova a riautenticarti.</string>
+    <string name="msg_404_not_found_user_subs">Non hai effettuato l\'accesso oppure l\'account non è registrato sul nostro server. Prova a riautenticarti.</string>
+    <string name="msg_500_internal_server_error_event_vote">C\'è stato un errore sul nostro server. Prova più tardi. Contattaci se il problema persiste.</string>
+    <string name="msg_500_internal_server_error_events">C\'è stato un errore sul nostro server. Prova più tardi. Contattaci se il problema persiste.</string>
+    <string name="msg_500_internal_server_error_subs">C\'è stato un errore sul nostro server. Prova più tardi. Contattaci se il problema persiste.</string>
+    <string name="msg_insert_valid_address">Indirizzo</string>
+    <string name="msg_insert_valid_description">Inserisci una breve descrizione dell\'evento</string>
+    <string name="msg_insert_valid_email">L\'indirizzo email deve essere valido.</string>
+    <string name="msg_insert_valid_latitude">Inserisci una latititudine valida, tra -90 e +90</string>
+    <string name="msg_insert_valid_longitude">Inserisci una longitudine valida, tra -180 e +180</string>
+    <string name="msg_insert_valid_password">La password deve essere almeno di 6 caratteri.</string>
+    <string name="msg_insert_valid_place">Seleziona un indirizzo prima di creare la sottoscrizione</string>
+    <string name="msg_insert_valid_radius">Inserisci un raggio valido, tra 0 e 2000 metri</string>
+    <string name="msg_insert_valid_username">L\'username non può essere vuoto.</string>
+    <string name="msg_network_problem_event_create">Potrebbe esserci un problema di rete, non è stato possibile creare l\'evento. Prova pià tardi.</string>
+    <string name="msg_network_problem_event_unvote">Potrebbe esserci un problema di rete, non è stato possibile rimuovere il voto. Prova pià tardi.</string>
+    <string name="msg_network_problem_event_vote">Potrebbe esserci un problema di rete, non è stato possibile votare l\'evento. Prova pià tardi.</string>
+    <string name="msg_network_problem_events_upd">Potrebbe esserci un problema di rete, non è stato possibile aggiornare gli eventi. Prova pià tardi.</string>
+    <string name="msg_network_problem_subscription_create">Potrebbe esserci un problema di rete, non è stato possibile creare la sottoscrizione. Prova pià tardi.</string>
+    <string name="msg_network_problem_subscriptions_upd">Potrebbe esserci un problema di rete, non è stato possibile scaricare gli aggiornamenti della sottoscrizione. Prova pià tardi.</string>
+    <string name="msg_no_event_to_show">Non ci sono eventi da mostrare :)</string>
+    <string name="msg_no_subs_to_show">Non ci sono sottoscrizioni da mostrare, perchè non ne crei una?</string>
+    <string name="msg_problem_login">Errore all\'accesso. Ricontrolla le tue credenziali oppure potrebbe essere un problema di rete.</string>
+    <string name="msg_problem_register">Errore alla registrazione. L\'email è già in uso oppure potrebbero esserci problemi di rete.</string>
+    <string name="msg_problem_resetpassword">Non è stato possibile resettare la password. L\'email non è registrata oppure potrebbero esserci problemi di rete.</string>
+    <string name="msg_success_event_create">Evento creato</string>
+    <string name="msg_success_login">Connesso.</string>
+    <string name="msg_success_register">Registrato con successo.</string>
+    <string name="msg_success_resetpassword">Email inviata, controlla la tua casella!</string>
+    <string name="msg_success_subscription_create">Sottoscrizione creata</string>
+    <string name="msg_unknown_error">C\'è stato un errore sconosciuto. Prova più tardi. Contattaci se il problema persiste</string>
+    <string name="open">Apri</string>
+    <string name="progress_event_message">Attendi per favore</string>
+    <string name="progress_event_title">Pubblicando l\'evento</string>
+    <string name="progress_fb_message">Attendi per favore</string>
+    <string name="progress_fb_title">Autenticazione con Facebook</string>
+    <string name="progress_subscription_message">Attendi per favore</string>
+    <string name="progress_subscription_title">Registrando la sottoscrizione</string>
+    <string name="subscription_button">Sottoscrizioni</string>
+    <string name="subscription_summary">Riassunto sottoscrizioni</string>
+    <string name="subscription_summary_error">Per vedere queste statistiche devi avere un account</string>
+    <string name="subscription_summary_text">Sei sottoscritto a %1$d luoghi e hai ricevuto %2$d notifiche a riguardo</string>
+    <string name="title_activity_subscription_list">Lista sottoscrizioni</string>
+    <string name="title_event_list_generic">List eventi</string>
+    <string name="title_event_list_location">Eventi a %1$s</string>
+    <string name="title_event_list_subscription">Eventi nella sottoscrizione</string>
+    <string name="title_event_list_uid">I tuoi eventi</string>
 </resources>
