Using CapabilityAPI to check if watch is connected to phone app

--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="new_event">New Event</string>
     <string name="nearby">Nearby</string>
     <string name="map">Map</string>
+    <string name="please_install_app">Please install phone app</string>
 </resources>
