--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -171,4 +171,11 @@
     <string name="map_dialog">Create new</string>
     <string name="map_dialog_event">Event</string>
     <string name="map_dialog_subscription">Subscription</string>
+    <string name="showcase_intro">Welcome to Neighborhood Security! I\'ll show you the main features.</string>
+    <string name="showcase_map">Click here to open a map to show all the events</string>
+    <string name="showcase_subscription">Here you can find your active subscriptions.</string>
+    <string name="showcase_stats">Click these icons to see statistics about app usage</string>
+    <string name="showcase_drawer_intro">This is the drawer. You can find additional functionalities here.</string>
+    <string name="showcase_drawer_account">This is your account. You can register one for free!</string>
+    <string name="showcase_drawer_createaccount">It\'s easy, just click here!</string>
 </resources>
